update: ajuste na visibilidade de senha no gerenciamento de usuarios

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -232,7 +232,7 @@
                 <td>
                   <div class="password-field">
                     <input type="password" class="form-control" name="senha" value="{{ u.senha }}" placeholder="Senha" />
-                    <button type="button" class="password-toggle" onclick="togglePassword(this)" title="Toggle password visibility"></button>
+                    <button type="button" class="password-toggle" onclick="togglePassword(this)" title="Toggle password visibility">
                       <i class="bi bi-eye"></i>
                     </button>
                   </div>
